--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@angular/cli": "~16.0.2",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
-    "@types/leaflet": "^1.9.3",
+    "@types/leaflet": "1.2.x",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
